--- a/css/styles.css
+++ b/css/styles.css
@@ -557,6 +557,75 @@ color: #434455;
     display: flex;
     align-items: baseline;
   }
+
+
+  .div-footer {
+    display: flex;
+    flex-direction: column;
+    margin-left: 80px;
+}
+
+.subs-form {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    margin-bottom: 16px;
+}
+
+.form-footer {
+    display: flex;
+    gap: 24px;
+}
+
+.form-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    border-radius: 4px;
+    padding: 8px 24px;
+    background-color: #4d5ae5;
+    min-width: 165px;
+    height: 40px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    text-align: center;
+    color: #fff;
+    border: none;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.form-input {
+    border: 1px solid #fff;
+    height: 40px;
+    border-radius: 4px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    width: 264px;
+    height: 40px;
+    background-color: #2e2f42;
+    padding: 8px 212px 8px 16px;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    color: #fff;
+    background-color: transparent;
+}
+
+.icon-footer-form {
+    fill: #fff;
+    margin-left: 16px;
+}
+
+
 .backdrop {
     position: fixed;
     top: 0;
