--- a/css/styles.css
+++ b/css/styles.css
@@ -657,7 +657,7 @@ color: #434455;
     width: 408px;
     min-height: 584px;
     border-radius: 4px;
-    padding: 72px, 24px, 24px, 24px;
+    padding: 72px 24px 24px 24px;
 
     transform: translate(-50%, -50%);
     
