--- a/css/styles.css
+++ b/css/styles.css
@@ -664,7 +664,8 @@ color: #434455;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
     background: #fcfcfc;
 
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1)
+    transition: transform opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    visibility: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .popup-close {
@@ -680,13 +681,18 @@ color: #434455;
     align-items: center;
     justify-content: center;
     border: 1px solid rgba(0, 0, 0, 0.1);
-      
+    padding: 0;
+    cursor: pointer;
+    
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 .icon-close-black {
     display: flex;
     align-items: center;
     justify-content: center;
     fill: #2e2f42;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .popup-close:focus {
     outline: none;
@@ -736,6 +742,12 @@ line-height: 1.16667;
 letter-spacing: 0.04em;
 color: #8e8f99;
 margin-bottom: 4px;
+line-height: 1.17; 
+display: block;
+}
+
+.popup-form-all {
+    margin-bottom: 8px;
 }
 
 .popup-input {
