--- a/css/styles.css
+++ b/css/styles.css
@@ -644,6 +644,7 @@ color: #434455;
   justify-content: center;
   align-items: center;
   z-index: 1000;
+  background-color: rgba(46, 47, 66, 0.4);
 }
 
 .backdrop.is-open {
@@ -667,8 +668,8 @@ color: #434455;
     background: #fcfcfc;
 
     transition: transform opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    visibility: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    margin-bottom: 8px;
 }
 
 .popup-close {
@@ -768,21 +769,24 @@ display: flex;
 align-items: center;
 justify-content: center;
 border: 1px solid rgba(46, 47, 66, 0.4);
-border-radius: 4px;
-width: 100%;
-height: 40px;
 padding-left: 38px;
 outline: none;
 background-color: transparent;
-outline: transparent;
 transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.poup-input:focus {
 border-color: #4D5AE5;
-border: 1px solid rgba(46, 47, 66, 0.4);
 }
 
 .popup-input-wrapper {
     margin-bottom: 8px;
     position: relative;
+}
+
+.icon-close-black {
+top: 50%;
+transform: translateY(-50%);
 }
 
 .popup-textarea {
@@ -869,7 +873,9 @@ fill: #4D5AE5;
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.04em;
+    color: #8e8f99;
   }
+
   
   .popup-label {
     color: var(--label-text-color);
@@ -944,8 +950,8 @@ fill: #4D5AE5;
     color: #8e8f99;
     white-space: nowrap;  /* Не переносити текст на новий рядок */
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    display: inline-flex;
     fill: transparent;
+    display: inline-flex;
   }
   
   .privacy-policy {
@@ -961,10 +967,8 @@ fill: #4D5AE5;
   }
   
 
-  button {
-    margin-bottom: 24px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  }
-  
+    button {
+      margin-bottom: 24px;
+      transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
