--- a/css/styles.css
+++ b/css/styles.css
@@ -645,6 +645,7 @@ color: #434455;
   align-items: center;
   z-index: 1000;
   background-color: rgba(46, 47, 66, 0.4);
+  margin-bottom: 8px;
 }
 
 .backdrop.is-open {
@@ -972,7 +973,7 @@ fill: transparent;
     font-family: Arial, sans-serif;
   }
   
-button {
+button, .btn{
 margin-bottom: 24px;
 transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
