--- a/css/styles.css
+++ b/css/styles.css
@@ -628,6 +628,11 @@ color: #434455;
     margin-left: 16px;
 }
 
+.logo-part,
+.footer-span {
+  display: inline-flex;
+}
+
 /* Стилі інпуту у футері */
 .section-footer .form-input {
   width: 264px;                 /* обов’язкова ширина */
@@ -752,6 +757,7 @@ color: #434455;
   padding-left: 38px;
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  line-height: 2;
 }
 .form-input:focus {
   border-color: #4d5ae5;
