--- a/css/styles.css
+++ b/css/styles.css
@@ -808,6 +808,9 @@ color: #434455;
 
 span.checkbox-box {
   display: inline-flex;
+}
+
+span.checkbox-box {
   width: 16px;
   height: 16px;
   border: 1px solid rgba(46, 47, 66, 0.4);
