--- a/css/styles.css
+++ b/css/styles.css
@@ -811,7 +811,7 @@ span.checkbox-box {
 }
 
 
-span.checkbox-box {
+.checkbox-box {
   width: 16px;
   height: 16px;
   border: 1px solid rgba(46, 47, 66, 0.4);
